# SDL_Game

./: CMakeLists.txt  GameUtilities.cpp  GameUtilities.h  ItemObjects.cpp  ItemObjects.h  Main.cpp  MyGameObjects.cpp  MyGameObjects.h  Projectiles.cpp  Projectiles.h  SDL_Handling.h  SDL_Handling_Environments.cpp  SDL_Handling_Exceptions.cpp  SDL_Handling_Objects.cpp  ShipObjects.cpp  ShipObjects.h
AI/: ai_base.cpp  ai_base.h
Basic/: AdditionalObjects.cpp  AdditionalObjects.h  BasicGameObjects.cpp  BasicGameObjects.h  Game.cpp  Game.h  GameUtilities.cpp  GameUtilities.h  Game_Initialization.cpp  Interfaces.h  Main.cpp  MyGameObjects.cpp  MyGameObjects.h  PlaySpace.cpp  Player.cpp  Player.h  Projectiles.cpp  UI.cpp  UI.h  new.h
Items/: ItemObjects.cpp  ItemObjects.h
Projectiles/: Projectiles.cpp  Projectiles.h
SDL_Handling/: SDL_Handling.h  SDL_Handling_Environments.cpp  SDL_Handling_Exceptions.cpp  SDL_Handling_Objects.cpp
Settings/: controlMap.cpp  controlMap.h
ShipObjects/: Ship.cpp  ShipComponents.cpp  ShipObjects.cpp  ShipObjects.h
